fix(tab selector) smaller margin on mobile/tablet

--- a/components/tab-selector/tab-selector.less
+++ b/components/tab-selector/tab-selector.less
@@ -4,11 +4,11 @@
 	position: relative;
 	width: auto;
 	height: 140px;
-	margin: -70px @spacing-default*1.5 @container-margin-bottom-s @spacing-default*1.5;
+	margin: -20px @spacing-default*1.5 @container-margin-bottom-s @spacing-default*1.5;
 	padding: 0;
 
 	@media @screen-small {
-		margin: -70px @spacing-default*1.5 @container-margin-bottom-l @spacing-default*1.5;
+		margin: -20px @spacing-default*1.5 @container-margin-bottom-l @spacing-default*1.5;
 	}
 
 	@media @screen-medium {
